--- a/index.html
+++ b/index.html
@@ -64,7 +64,35 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-<meta content="/img/logo.png" property="og:image"/></head>
+<meta content="https://88st.cloud/img/logo.png" property="og:image"/>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "Organization",
+      "@id": "https://88st.cloud/#org",
+      "name": "88ST",
+      "alternateName": "88 (팔팔커뮤니티)",
+      "url": "https://88st.cloud/",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://88st.cloud/img/logo.png"
+      }
+    },
+    {
+      "@type": "WebSite",
+      "@id": "https://88st.cloud/#website",
+      "url": "https://88st.cloud/",
+      "name": "88ST",
+      "inLanguage": "ko",
+      "publisher": {"@id": "https://88st.cloud/#org"}
+    }
+  ]
+}
+</script>
+
+</head>
 <body>
 <h1 style="position:absolute;left:-9999px;">스포츠 배당 분석기와 배당 마진 계산기 | 88</h1>
 <div class="header">
