--- a/tool-casino/index.html
+++ b/tool-casino/index.html
@@ -27,7 +27,7 @@
   {
     "@context": "https://schema.org",
     "@type": "BreadcrumbList",
-    "mainEntity": [
+    "itemListElement": [
       {"@type":"ListItem","position":1,"name":"홈","item":"https://88st.cloud/"},
       {"@type":"ListItem","position":2,"name":"카지노 계산기","item":"https://88st.cloud/tool-casino/"}
     ]
