--- a/cert/index.html
+++ b/cert/index.html
@@ -15,7 +15,7 @@
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 <link href="https://88st.cloud/cert/" rel="canonical"/>
-<link href="/assets/c.c603748c04b2.css" rel="stylesheet"/>
+<link href="/assets/c.cert.v55.20260217.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
 <script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <meta content="https://88st.cloud/cert/" property="og:url"/></head>
@@ -127,13 +127,14 @@
 </div>
 <div class="popup-actions">
 <button class="btn" id="copyBtn">코드 복사</button>
+<button class="btn" id="shareBtn">링크 복사</button>
 <a class="btn primary" data-no-auto-outbound="1" data-outbound-manual="1" href="#" id="pLink" rel="noopener noreferrer" target="_blank">사이트 이동</a>
 <a class="btn" data-no-auto-outbound="1" data-outbound-manual="1" href="https://t.me/UZU59" id="pTelegram" rel="noopener noreferrer" target="_blank">문의 (텔레그램)</a>
 <button class="btn" id="favBtn">☆ 즐겨찾기</button>
 </div>
 </div>
 </div>
-<script defer="" src="/assets/js/j.64302c75fe3a.js"></script>
+<script defer="" src="/assets/js/j.cert.v55.20260217.js"></script>
 <script type="application/ld+json">
   {
     "@context":"https://schema.org",
