--- a/tool-casino/index.html
+++ b/tool-casino/index.html
@@ -19,10 +19,10 @@
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/c.43df7d0713c1.css" rel="stylesheet"/>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<link href="/assets/c.casino.evo.v57.20260217.css" rel="stylesheet"/>
+<link href="/assets/c.casino.evo.v62.20260217.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
 <script defer="" src="/assets/js/j.c471c3193855.js"></script>
-<script defer="" src="/assets/js/j.casino.evo.v57.20260217.js"></script>
+<script defer="" src="/assets/js/j.casino.evo.v62.20260217.js"></script>
 <script src="../assets/js/inline-bundles/b.cba5ff41a7.js"></script>
 <script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <script type="application/ld+json">
@@ -307,6 +307,31 @@
       </div>
     </section>
   </div>
+
+
+  <section class="cs-card" style="margin-top:12px;" aria-label="슈 트래커">
+    <h2>슈 트래커 (최근 결과 기록)</h2>
+    <div class="cs-adv small" style="border-top:none; padding-top:8px;">
+      <div>• 최근 결과를 기록해 <b>편차/연속/분산</b>을 숫자로 확인하는 용도입니다. “다음 결과를 맞추는 예측”이 아닙니다.</div>
+      <div>• 바카라는 독립 시행이므로, 다음 핸드에 대한 확정 예측은 불가능합니다. (여기서는 이론 확률 + 관측치만 제공합니다)</div>
+    </div>
+
+    <div class="cs-shoe-toolbar" style="margin-top:10px;">
+      <div class="cs-shoe-providers" role="tablist" aria-label="운영사 선택">
+        <button class="cs-shoe-pill on" type="button" data-provider="evo">Evolution</button>
+        <button class="cs-shoe-pill" type="button" data-provider="prag">Pragmatic</button>
+      </div>
+      <div class="cs-shoe-actions">
+        <button class="insight-btn btn-mini" type="button" data-add="P">PLAYER</button>
+        <button class="insight-btn btn-mini" type="button" data-add="B">BANKER</button>
+        <button class="insight-btn btn-mini" type="button" data-add="T">TIE</button>
+        <button class="insight-btn btn-mini cs-shoe-soft" type="button" data-act="undo">되돌리기</button>
+        <button class="insight-btn btn-mini cs-shoe-soft" type="button" data-act="clear">초기화</button>
+      </div>
+    </div>
+
+    <div class="cs-evo-out" id="evoShoeOut" style="margin-top:10px;"></div>
+  </section>
 
   <section class="cs-card" style="margin-top:12px;">
     <h2>안내</h2>
