--- a/tool-slot/index.html
+++ b/tool-slot/index.html
@@ -15,7 +15,7 @@
 <meta content="RTP(환수율)·변동성·베팅·스핀 수를 기반으로 총베팅/기대손실/권장 뱅크롤/세션 비용을 계산합니다. 하우스엣지(100-RTP) 이해에 도움됩니다." property="og:description"/>
 <meta content="https://88st.cloud/tool-slot/" property="og:url"/>
 <link href="/assets/css/x.11d0a10f603d.css" rel="stylesheet"/>
-<link href="/assets/c.slot.v58.20260217.css" rel="stylesheet"/>
+<link href="/assets/c.slot.v62.20260217.css" rel="stylesheet"/>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -92,7 +92,7 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-<script defer="" src="/assets/js/j.slot.v58.20260217.js"></script>
+<script defer="" src="/assets/js/j.slot.v62.20260217.js"></script>
 <meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="wrap">
@@ -227,10 +227,15 @@
             <option value="">전체</option>
           </select>
         </div>
-        <div class="sl-field" style="min-width:180px;">
-          <label>즐겨찾기</label>
-          <label class="sl-check"><input id="slDbFavOnly" type="checkbox"/> <span>즐겨찾기만</span></label>
-        </div>
+        
+      <div class="sl-field sl-favfield" style="min-width:180px;">
+        <label>즐겨찾기</label>
+        <input id="slDbFavOnly" type="checkbox" hidden/>
+        <button class="sl-fav-toggle" id="slDbFavBtn" type="button" aria-pressed="false">
+          <span class="sl-fav-star" aria-hidden="true">★</span>
+          <span class="sl-fav-text" id="slDbFavText">전체 보기</span>
+          <span class="sl-fav-chip" aria-hidden="true">즐겨찾기만</span>
+        </button>
       </div>
 
       <details class="sl-admin" style="margin-top:12px;">
