--- a/fortune/index.html
+++ b/fortune/index.html
@@ -38,9 +38,9 @@
   <link rel="stylesheet" href="/assets/c.0b3d8a45f8c9.css"/>
   <script defer src="/assets/js/j.efba3509e62c.js"></script>
   <link rel="stylesheet" href="/assets/c.a50dd3bc5b33.css"/>
-  <script defer src="/assets/js/j.8829a3ccde44.js"></script>
+  <script defer src="/assets/js/j.8829a3ccde44.v63.20260217.js"></script>
 
-  <link rel="stylesheet" href="/assets/css/fortune.v62.20260217.css"/>
+  <link rel="stylesheet" href="/assets/css/fortune.v63.20260217.css"/>
 
   <style>
     /* Fortune page refinements (keeps base language + premium spacing) */
@@ -198,6 +198,6 @@
     </div>
   </div>
 
-  <script defer src="/assets/js/fortune.v62.20260217.js"></script>
+  <script defer src="/assets/js/fortune.v63.20260217.js"></script>
 </body>
 </html>
