--- a/tool-slot/index.html
+++ b/tool-slot/index.html
@@ -91,15 +91,34 @@
 <script defer="" src="/assets/js/j.d2cf652ff950.js"></script>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
+<script defer="" src="/assets/js/j.8829a3ccde44.v63.20260217.js"></script>
 <script defer="" src="/assets/js/j.slot.v62.20260217.js"></script>
-<meta content="/img/logo.png" property="og:image"/></head>
+<meta content="/img/logo.png" property="og:image"/>  <link href="/assets/c.guide.v63.20260217.css" rel="stylesheet"/>
+</head>
 <body>
 <div class="wrap">
 <div class="hero">
 <h1>슬롯 환수율(RTP) 분석기</h1>
 <p>RTP·변동성·베팅·스핀수로 <b>총베팅</b>, <b>기대 손실(이론)</b>, <b>권장 뱅크롤</b>을 한 번에 계산합니다.<br/><span class="small">※ 정보 제공/참고용 · 실제 결과는 변동성이 매우 큽니다.</span></p>
 </div>
+
+
+<details class="st-guide">
+  <summary>
+    <span>사용 가이드</span>
+    <span class="meta">RTP·변동성·세션</span>
+  </summary>
+  <div class="st-guide-body">
+    <h4>해석 포인트</h4>
+    <ul>
+      <li><b>기대 손실(이론)</b> = 총베팅 × (1 - RTP). 장기 평균 참고치입니다.</li>
+      <li><b>변동성</b>은 “평균에서 얼마나 흔들리는지”입니다. 고변동일수록 체감 편차가 커집니다.</li>
+      <li><b>세션 기록</b>은 결과를 저장/비교해서 과몰입(연속 손실) 구간을 빠르게 체크하는 용도입니다.</li>
+    </ul>
+    <div class="muted">※ RTP는 ‘환수율’이지, 단기 수익을 보장하지 않습니다.</div>
+  </div>
+</details>
+
 
 <div class="sl-tabs" id="slTabs" role="tablist" aria-label="슬롯 도구 탭">
   <button class="sl-tab on" type="button" data-tab="calc" aria-selected="true">RTP 계산</button>
