--- a/tool/kelly/index.html
+++ b/tool/kelly/index.html
@@ -23,7 +23,7 @@
 <script defer="" src="/assets/js/j.d2cf652ff950.js"></script>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
+<script defer="" src="/assets/js/j.8829a3ccde44.v63.20260217.js"></script>
 <meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="wrap">
